force-app/main/default/objects/Interview__c/Interview__c.object-meta.xml
<CustomObject>
    <label>Interview</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Interview Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>