force-app/main/default/objects/Interview__c/fields/Area_Name_Plan_A_Lunch__c.field-meta.xml
<CustomField>
    <fullName>Area_Name_Plan_A_Lunch__c</fullName>
    <label>Area Name Plan A (Lunch)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>