force-app/main/default/objects/Interview__c/fields/Area_Name_Plan_B_Cocktail__c.field-meta.xml
<CustomField>
    <fullName>Area_Name_Plan_B_Cocktail__c</fullName>
    <label>Area Name Plan B (Cocktail)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>