force-app/main/default/objects/Interview__c/fields/Celebrant_number__c.field-meta.xml
<CustomField>
    <fullName>Celebrant_number__c</fullName>
    <label>Celebrant number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>