force-app/main/default/objects/Interview__c/fields/Ceremony_area_name_plan_A__c.field-meta.xml
<CustomField>
    <fullName>Ceremony_area_name_plan_A__c</fullName>
    <label>Ceremony area name plan A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>