force-app/main/default/objects/Interview__c/fields/Ceremony_area_name_plan_B__c.field-meta.xml
<CustomField>
    <fullName>Ceremony_area_name_plan_B__c</fullName>
    <label>Ceremony area name plan B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>