force-app/main/default/objects/Interview__c/fields/Ceremony_type__c.field-meta.xml
<CustomField>
    <fullName>Ceremony_type__c</fullName>
    <label>Ceremony type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>