force-app/main/default/objects/Interview__c/fields/Day_requested__c.field-meta.xml
<CustomField>
    <fullName>Day_requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Day requested</label>
    <type>Checkbox</type>
</CustomField>