force-app/main/default/objects/Interview__c/fields/Guests_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Guests_Nationality__c</fullName>
    <label>Guests Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>