force-app/main/default/objects/Interview__c/fields/Guests_Number__c.field-meta.xml
<CustomField>
    <fullName>Guests_Number__c</fullName>
    <label>Guests Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>