force-app/main/default/objects/Interview__c/fields/Hour_Cake__c.field-meta.xml
<CustomField>
    <fullName>Hour_Cake__c</fullName>
    <label>Hour (Cake)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>