force-app/main/default/objects/Interview__c/fields/Hour_Ceremony__c.field-meta.xml
<CustomField>
    <fullName>Hour_Ceremony__c</fullName>
    <label>Hour (Ceremony)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>