force-app/main/default/objects/Interview__c/fields/Hour_Cocktail__c.field-meta.xml
<CustomField>
    <fullName>Hour_Cocktail__c</fullName>
    <label>Hour (Cocktail)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>