force-app/main/default/objects/Interview__c/fields/Hour_Dinner__c.field-meta.xml
<CustomField>
    <fullName>Hour_Dinner__c</fullName>
    <label>Hour (Dinner)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>