force-app/main/default/objects/Interview__c/fields/Hour_Lunch__c.field-meta.xml
<CustomField>
    <fullName>Hour_Lunch__c</fullName>
    <label>Hour (Lunch)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>