force-app/main/default/objects/Interview__c/fields/Hour_Party__c.field-meta.xml
<CustomField>
    <fullName>Hour_Party__c</fullName>
    <label>Hour (Party)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>