force-app/main/default/objects/Interview__c/fields/Music_links_and_details_Ceremony__c.field-meta.xml
<CustomField>
    <fullName>Music_links_and_details_Ceremony__c</fullName>
    <label>Music links and details (Ceremony)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>