force-app/main/default/objects/Interview__c/fields/Music_Links_and_Details_Cocktail__c.field-meta.xml
<CustomField>
    <fullName>Music_Links_and_Details_Cocktail__c</fullName>
    <label>Music Links and Details (Cocktail)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>