force-app/main/default/objects/Interview__c/fields/Musician_for_ceremony__c.field-meta.xml
<CustomField>
    <fullName>Musician_for_ceremony__c</fullName>
    <label>Musician for ceremony</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>