force-app/main/default/objects/Interview__c/fields/Musician_Lunch__c.field-meta.xml
<CustomField>
    <fullName>Musician_Lunch__c</fullName>
    <label>Musician (Lunch)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>