force-app/main/default/objects/Interview__c/fields/Recorded_music_for_ceremony__c.field-meta.xml
<CustomField>
    <fullName>Recorded_music_for_ceremony__c</fullName>
    <label>Recorded music for ceremony</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>