force-app/main/default/objects/Interview__c/fields/Sound_system_ceremony__c.field-meta.xml
<CustomField>
    <fullName>Sound_system_ceremony__c</fullName>
    <label>Sound system (Ceremony)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>