force-app/main/default/objects/Interview__c/fields/Sound_System_Cocktail__c.field-meta.xml
<CustomField>
    <fullName>Sound_System_Cocktail__c</fullName>
    <label>Sound System (Cocktail)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>