force-app/main/default/objects/Interview__c/fields/Tipo_Evento_del_giorno__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Evento_del_giorno__c</fullName>
    <inlineHelpText>ESEMPIO Welcome Party / Wedding Day / Pool Party / BBQ Party)</inlineHelpText>
    <label>Tipo Evento del giorno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>