force-app/main/default/objects/Interview__c/fields/Venue_name_e_Responsabile_Location__c.field-meta.xml
<CustomField>
    <fullName>Venue_name_e_Responsabile_Location__c</fullName>
    <label>Venue name e Responsabile Location</label>
    <type>TextArea</type>
</CustomField>