force-app/main/default/objects/Interview__c/recordTypes/Interview_1st_day.recordType-meta.xml
<RecordType>
    <fullName>Interview_1st_day</fullName>
    <active>true</active>
    <label>Interview 1st day</label>
</RecordType>