force-app/main/default/objects/Interview__c/recordTypes/Interview_2nd_day.recordType-meta.xml
<RecordType>
    <fullName>Interview_2nd_day</fullName>
    <active>false</active>
    <label>Interview 2nd day</label>
</RecordType>