force-app/main/default/objects/Interview__c/recordTypes/Interview_3rd_day.recordType-meta.xml
<RecordType>
    <fullName>Interview_3rd_day</fullName>
    <active>false</active>
    <label>Interview 3rd day</label>
</RecordType>