force-app/main/default/objects/Interview__c/recordTypes/Interview_Main_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Interview_Main_Record_Type</fullName>
    <active>true</active>
    <label>Interview Main Record Type</label>
</RecordType>